<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="10dp"
    tools:context=".ui.fragments.GuestListFragment">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_margin="8dp"
        android:text="@string/guests_reservation"
        android:textColor="@color/fb"
        android:textSize="24sp"
        android:textAlignment="center"
        android:textStyle="bold"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/wrap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:layout_below="@id/txt_title"
        android:elevation="10dp">

        <TextView
            android:id="@+id/txt_reserved"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/guests_reserved"
            android:textColor="@color/dark_gray"
            android:textStyle="bold"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_reserved" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rec_view_reserved"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@color/transparent"
            android:orientation="vertical"
            app:cardCornerRadius="20dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider1" />

        <TextView
            android:id="@+id/txt_non_reserved"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/guests_need_reservation"
            android:textColor="@color/dark_gray"
            android:textStyle="bold"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rec_view_reserved" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_non_reserved" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rec_view__non_reserved"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@color/transparent"
            android:orientation="vertical"
            app:cardCornerRadius="20dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/txt_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:text="@string/error_msg"
        android:visibility="gone"
        android:textColor="@color/colorAccent"
        android:textSize="12sp"
        android:layout_below="@id/wrap" />

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:backgroundTint="@color/black"
        android:padding="10dp"
        android:layout_margin="20dp"
        android:text="@string/btn_continue"
        android:layout_gravity="center"
        android:textColor="@color/bg_color"
        android:layout_below="@id/txt_error" />

</RelativeLayout>